styles.css
:root {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  --main-font: Inter, Arial, sans-serif;
  --main-bg: #EEE;
  --main-fg: #1A1A1A;
  --main-accent: #FF14AF;
  --fcc-bg: #1B1B32;
  --fcc-fg: #F5F6F7;
  --fcc-accent: #FEAC32;
  --top-bg: #111827;
  --top-fg: #D1D5DB;
  --top-accent: #0F766E;
}

body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  user-select: none;
  font-family: var(--main-font);
  background: var(--main-bg);
  color: var(--main-fg);
  accent-color: var(--main-accent);
}

a {
  font-weight: bold;
  text-decoration: none;
  transition: .1s;
}

nav {
  display: flex;
  position: fixed;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
  padding: 1em 0;
  width: 100%;
  height: fit-content;
  background: var(--main-fg);
  border-bottom: 1px solid var(--main-bg);
  z-index: 1;
}

nav > a {
  color: var(--main-bg);
}

nav > a:hover,
footer > a:hover {
  color: var(--main-accent);
}

#welcome-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  user-select: none;
  gap: .5em;
  text-align: center;
  height: 100vh;
}

#welcome-section > img {
  width: 8em;
  height: 8em;
  box-shadow: 0 0 2px 0 var(--main-fg);
  border-radius: 50%;
  margin-top: -4em;
  display: inherit;
  align-items: center;
  justify-content: center;
}

#welcome-section > h1 {
  display: inherit;
  flex-direction: column;
  margin: 0 1em;
}

#welcome-section > h1 > em {
  font-weight: normal;
  font-size: .875em;
}

#welcome-section > h2 {
  font-size: 1.375em;
  font-weight: normal;
  margin: 0 1em;
  max-width: 22em;
}

hr {
  visibility: hidden;
  width: 0;
  height: 0;
}

.feat {
  padding: 3em 1em 8em 1em;
  text-align: center;
}

.feat > h2 {
  text-align: center;
  font-size: 1.375em;
  margin: 1em;
}

.feat > h2 > a {
  color: inherit;
  text-decoration: underline;
}

.feat > div {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: .5em;
}

.feat > a {
  font-size: 1.25em;
  width: 7em;
  padding: .5em 2em;
  position: relative;
  border-radius: 1em;
  top: 2em;
}

#projects {
  color: var(--fcc-fg);
  background: var(--fcc-bg);
  box-shadow: 0 0 1em 0 var(--fcc-bg);
}

#projects > h2 > a:hover {
  color: var(--fcc-accent);
}

.project-tile {
  display: inherit;
  text-align: center;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 21.25em;
  height: 30em;
  margin: 1.25em;
  padding: .625em 1.25em;
  box-shadow: 0 0 2px 1px var(--fcc-fg);
  border-radius: 1em;
}

.project-tile > header > h3 {
  font-size: 1.25em;
}

.project-tile > header > p {
  font-size: 1.1em;
}

.project-tile > main {
  display: inherit;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2em;
  gap: 2em;
}

.project-tile > main > a,
.source-links > a {
  font-size: 1.25em;
  width: 7em;
  padding: .5em .6em;
  border-radius: 1em;
}

.source-links {
  display: inherit;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: .75em;
}

#projects > a,
.source-links.fcc > a {
  color: var(--fcc-fg);
  border: 1px solid var(--fcc-fg);
}

#projects > a:hover,
.source-links.fcc > a:hover {
  color: var(--fcc-bg);
  background: var(--fcc-fg);
}

.project-tile.fcc > main > a {
  color: var(--fcc-accent);
  border: 1px solid var(--fcc-accent);
}

.project-tile.fcc > main > a:hover {
  color: var(--fcc-bg);
  background: var(--fcc-accent);
}

#projects-top {
  color: var(--top-fg);
  background: var(--top-bg);
  box-shadow: 0 0 1em 0 var(--top-bg);
}

#projects-top > h2 > a:hover {
  color: var(--top-accent);
}

#projects-top > a,
.source-links.top > a {
  color: var(--top-fg);
  border: 1px solid var(--top-fg);
}

#projects-top > a:hover,
.source-links.top > a:hover {
  color: var(--top-bg);
  background: var(--top-fg);
}

.project-tile.top > main > a {
  color: var(--top-accent);
  border: 1px solid var(--top-accent);
}

.project-tile.top > main > a:hover {
  color: var(--top-bg);
  background: var(--top-accent);
}

footer {
  height: 50vh;
  margin-top: 4.375em;
  text-align: center;
}

@media only screen and (min-width: 30em) {
  footer {
    height: 25vh;
    margin-bottom: 10em;
  }
}

footer > h1 {
  margin-bottom: 1em;
}

footer > a {
  display: inline-block;
  font-size: 1.375em;
  color: inherit;
  margin: 1em 2em;
}

